--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 			<li>
 				<div class="link">
 					<h2>Task 1</h2>
-					<div class="prev"><a href="labwork1/task1/index.html" target="_blank">Preview</a></div>
+					<div class="prev"><a href="LabWork1/task1/index.html" target="_blank">Preview</a></div>
 					<div class="source"><a href="" target="_blank">Source</a></div>
 				</div>
 			</li>
 			<li>
 				<div class="link">
 					<h2>Task 2</h2>
-					<div class="prev"><a href="labwork1/task2/index.html" target="_blank">Preview</a></div>
+					<div class="prev"><a href="/labwork1/task2/index.html" target="_blank">Preview</a></div>
 					<div class="source"><a href="" target="_blank">Source</a></div>
 				</div>
 			</li>
