--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
 				<div class="link">
 					<h2>Task 1</h2>
 					<div class="prev"><a href="LabWork1/task1/index.html" target="_blank">Preview</a></div>
-					<div class="source"><a href="" target="_blank">Source</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork1/task1" target="_blank">Source</a></div>
 				</div>
 			</li>
 			<li>
 				<div class="link">
 					<h2>Task 2</h2>
-					<div class="prev"><a href="/labwork1/task2/index.html" target="_blank">Preview</a></div>
-					<div class="source"><a href="" target="_blank">Source</a></div>
+					<div class="prev"><a href="LabWork1/task2/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork1/task2" target="_blank">Source</a></div>
 				</div>
 			</li>
 			<li>
 				<div class="link">
 					<h2>Task 3</h2>
-					<div class="prev"><a href="labwork1/task3/index.html" target="_blank">Preview</a></div>
-					<div class="source"><a href="" target="_blank">Source</a></div>
+					<div class="prev"><a href="LabWork1/task3/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork1/task3" target="_blank">Source</a></div>
 				</div>
 			</li>
 			<li>
 				<div class="link">
 					<h2>Task 4</h2>
-					<div class="prev"><a href="labwork1/task4/index.html" target="_blank">Preview</a></div>
-					<div class="source"><a href="" target="_blank">Source</a></div>
+					<div class="prev"><a href="LabWork1/task4/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork1/task4" target="_blank">Source</a></div>
 				</div>
 			</li>
 			<li>
 				<div class="link">
 					<h2>Task 5</h2>
-					<div class="prev"><a href="labwork1/task5/index.html" target="_blank">Preview</a></div>
-					<div class="source"><a href="" target="_blank">Source</a></div>
+					<div class="prev"><a href="LabWork1/task5/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork1/task5" target="_blank">Source</a></div>
 				</div>
 			</li>
 		</ul>
