--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 </head>
 <body>
 
-<div class="main">
+<div class="main" id="lab2">
+	<div class="title">
+		<h1>Lab Work 2</h1>
+	</div>
+	<div class="links">
+		<ul>
+			<li>
+				<div class="link">
+					<h2>Basic CSS</h2>
+					<div class="prev"><a href="LabWork2/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork2" target="_blank">Source</a></div>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+<div class="main" id="lab1">
 	<div class="title">
 		<h1>Lab Work 1</h1>
 	</div>
