--- a/index.html
+++ b/index.html
@@ -68,5 +68,22 @@
 	</div>
 </div>
 
+<div class="main" id="lab3">
+	<div class="title">
+		<h1>Lab Work 3</h1>
+	</div>
+	<div class="links">
+		<ul>
+			<li>
+				<div class="link">
+					<h2>Design a website</h2>
+					<div class="prev"><a href="LabWork3/index.html" target="_blank">Preview</a></div>
+					<div class="source"><a href="https://github.com/reduanmasud/se408lab/tree/main/LabWork3" target="_blank">Source</a></div>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+
 </body>
 </html>
