Title of main page changed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Lab Work 01</title>
+	<title>Lab Works</title>
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
